--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
-	<link rel="stylesheet" href="/css/normalize.css">
-	<link rel="stylesheet" href="/css/skeleton.css">
-	<link rel="stylesheet" href="/css/styles.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/skeleton.css">
+	<link rel="stylesheet" href="css/styles.css">
 	
-	<script src="/js/math.js"></script>
-	<script src="/js/numeric-1.2.6.js"></script>
-	<script src="/js/jquery-2.1.1.js"></script>
-	<script src="/js/jquery-ui.js"></script>
-	<script src="/js/three.min.js"></script>
-	<script src="/js/fft.js"></script>
-	<script src="/js/script.js"></script>
+	<script src="js/math.js"></script>
+	<script src="js/numeric-1.2.6.js"></script>
+	<script src="js/jquery-2.1.1.js"></script>
+	<script src="js/jquery-ui.js"></script>
+	<script src="js/three.min.js"></script>
+	<script src="js/fft.js"></script>
+	<script src="js/script.js"></script>
 </head>
 
 <body>
